...
                    // Navigate to Add-Edit screen
                    navController.navigate(Screen.AddEditNoteScreen.route)
                }, backgroundColor = MaterialTheme.colors.primary
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = "Add"
                )
            }
        }, scaffoldState = scaffoldState
    ) {
        Column(
            modifier = Modifier
...
                            NotesEvent.ToggleOrderSection
                        )
                    },
                ) {
                    Icon(
                        imageVector = Icons.Default.Sort,
                        contentDescription = "Sort"
                    )
                }
            }

            AnimatedVisibility(
                visible = state.isOrderSectionVisible,
...
